--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -53,7 +53,7 @@ TiAl alloy has been used as structural material in aviation industry because its
 
 Two phase titanium aluminide alloys exhibit a much better mechanical performance than their monolithic
 constituents $\gamma$(TiAl) and $\alpha_2$ (Ti3Al), provided that the phase distribution and grain size are suitably controlled. Two-phase titantium aliuminde alloys with proper phase distribution and grain size exhibit better mechanicalperformance compared with monolithicconstituents gamma and alpha[].
-Brittle fracture in TiAl alloy strongly affects the safety of fracture of structure like turbo of aircraft engine andcombustion generator. [R].Defects such as dislocation, void and segregation plays an significant role in the process of fracture[R].In order to understanding the mechanism of brittle fracture, multiscale methods from micro to marco scale have been applied to investigate the behavior of fracture. It's necessary to carefully examine the revolution of defects and its influence on the fracture process at atomic scale.
+Brittle fracture in TiAl alloy strongly affects the safety of fracture of structure like turbo of aircraft engine andcombustion generator. [R].Defects such as dislocation, void and segregation plays an significant role in the process of fracture[R].In order to understanding the mechanism of brittle fracture, multi-scale methods from micro to marco scale have been applied to investigate the behavior of fracture. It's necessary to carefully examine the revolution of defects and its influence on the fracture process at atomic scale.
 A previous study on void growth in gamma-TiAl single crystal has reveals that void with high volume fraction detracts incipient yield strength [R].
 Molecular dynamics(MD method has been use to investigate the evolution of void in materials in nano-
 scale[R].
@@ -117,14 +117,14 @@ The existence of void detract the strength, and the void inside $\alpha$ phase g
 
 The core of  a dislocation intersecting an interface often needs to be transformed. For example, an ordinary 1/2<110] dislocation gliding in one $\gamma$ grain has to be converted in to a <101] super dislocation with the double Burgers vector gliding in an adjacent $\gamma$ grain. At the $\alpha/\gamma$ interface the dislocations existing in the $D0_{19}$ structure have to be transformed into dislocations consistent with the $L1_0$structure. These core transformations are associated with a change of the dislocation line energy because the lengths of the Burgers vectors and the shear module are different.
  
-Dislocations crossing semi-coherent boundaries have to intersect the misfit dislocations, a process that involves elastic interaction, jog formation and the incorporation of gliding dislocations into the mismatch structure of the interface.When the slip is forced to cross $\alpha_2$ lamellae, pyramidal slip of the $\alpha_2$ phase is required, which needs an extremely high shear stress.
+Dislocations crossing semi-coherent boundaries have to intersect the misfit dislocations, a process that involves elastic interaction, jog formation and the incorporation of gliding dislocations into the mismatch structure of the interface.When the slip is forced to cross $\alpha_2$ lamella, pyramidal slip of the $\alpha_2$ phase is required, which needs an extremely high shear stress.
 
 
 %\subsection{Fracture Process with Integranular Void }
 
 %\subsection{Fracture Process with Intergranular Void }
 
-\subsection{Evolution of spherical boid in the simulation with intragranular spherical voids}
+\subsection{Evolution of spherical void in the simulation with intragranular spherical voids}
 A step, of the width of a burgers vector, will be generated at both sidesof a crystal along teh direction of teh burgers vector after dislocation traversing teh entire crystal, as is shown in \ref{fig:}. A small tep will be formed at spherical void surface toward teh void interiorafter dislocation absorptionat sphericalvoid surfaces, as is shown in \ref{fig:}. If a great number of dislocation slip along their respective systemstowards teh spherical nanovoid in all directions, and are absorbed at spherical void surfaces, the spherical nanovoid will eventually shrink from teh dash circle to 
 
 \begin{figure}
