--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -109,6 +109,8 @@ $$\sigma_t(i)= $$
 
 \section{Results and Discussion}
 
+\subsection{Deformation Mechanisms in Two-Phase Alloys}
+Deformation phenomena in TiAl alloys have been widely studied in order to overcome the problems associated with the limited ductility and damage tolerance. The literature data covers a wide range of parameters such as alloy composition, microstructure and deformation temperature. Much of the work has been performed on single phase $\gamma$ alloys and PST crystals. However, the following discussion concentrates on deformation phenomena that rely on the elastoplastic codeformation of the $\gamma$ and $\gamma_2$ phases and on the particular point defect situation occurring in two - phase alloys. Due to this effect ( $\alpha_2$ + $\gamma$ ) alloys exhibit some remarkable properties that are unlike those of either constituent.
 
 \subsection{Fracture Process}
 \paragraph{initiation of crack}
