--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -1,5 +1,5 @@
 \documentclass[times]{elsarticle}
-\usepackage[margin=2.5cm]{geometry}
+\usepackage[margin=2cm]{geometry}
 %\documentclass[]{elsarticle}
 \usepackage[labelfont=bf,justification=raggedright]{caption}
 \captionsetup[figure]{name=Fig. ,labelsep=period,singlelinecheck=true,skip=5pt}
@@ -39,7 +39,7 @@
 
 \address[mymainaddress]{School of Mechanical and Electronical Engineering, Lanzhou University of Technology. Lanzhou 730050, China}
 \begin{abstract}
- The fracture processes of nanocrystalline metallic materia is affected by dislocation, nanovoid and other defects. Existing studies of defect evolution in titanium-aluminium alloy cover the case that voids located in single crystals, inside grain in poly crystals and at the grain boundaries.Molecular dynamics simulation was performed to study the evolution of a spherical nanovoid in $\alpha$+$\gamma$ two-phase titanium-aluminium alloy under uniaxial tension. The results show that voids located at the $\alpha$/$\gamma$ phase boundary have significant detract to strength of Ti-Al polycrystalline.
+Fracture processes of nanocrystalline metallic materia is affected by dislocation, nanovoid and other defects. Existing studies of defect evolution in titanium-aluminium alloy cover the case that voids located in single crystals, inside grain in poly crystals and at the grain boundaries.Molecular dynamics simulation was performed to study the evolution of a spherical nanovoid in $\alpha$+$\gamma$ two-phase titanium-aluminium alloy under uniaxial tension. The results show that voids located at the $\alpha$/$\gamma$ phase boundary have significant detract to strength of Ti-Al polycrystalline.
 \end{abstract}
 
 \begin{keyword}
@@ -50,18 +50,24 @@ $\alpha$+$\gamma$ two phase TiAl alloy; void; molecular dynamics
 \linenumbers
 
 \section{Introduction}
-TiAl alloy has been used as structural material in aviation industry because its inherent advantages such as low density and self-diffusion rates, high elastic module and high strength \cite{}. However, single phase $\gamma-\rm TiAl$ generally brittle at room temperatures and this limits their use in many other fields.Two-phase titanium aluminum alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\gamma$($\rm Ti_3Al$) alloy \cite{}.
+\paragraph{Material}
+TiAl alloy has been used as structural material in aviation industry because its inherent advantages such as low density and self-diffusion rates, high elastic module and high strength \cite{vu2013}.However, single phase $\gamma-\rm TiAl$ generally brittle at room temperatures and this limits their use in many other fields.Two-phase titanium aluminum alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\gamma$($\rm Ti_3Al$) alloy \cite{}.
+
+\paragraph{Void}
+Two phase titanium aluminide alloys exhibit a much better mechanical performance than their monolithic constituents $\gamma$(TiAl) and $\alpha_2$ (Ti3Al), provided that the phase distribution and grain size are suitably controlled. Two-phase titantium aliuminde alloys with proper phase distribution and grain size exhibit better mechanicalperformance compared with monolithicconstituents gamma and alpha[].
+Brittle fracture in TiAl alloy strongly affects the safety of fracture of structure like turbo of aircraft engine andcombustion generator.
 
 The failure modes of materials have significant influence on the design of material properties in materials science. Rapture failure at the macroscopic scale can be attributed to nucleation, growth and propagation of cracks, but at the microscopic scale cracks are initially easily formed at defects in the casting process, such as voids and inclusions [1].These defects are known to play a fundamental role in the deformation of the material. Nucleation, growth and coalescence of voids are deemed as the primary mechanism of ductile material fracture, in which void growth is particularly important. Therefore, it is necessary to study the deformation response of porous materials with the consideration of microstructure evolution.
 
+
 Two phase titanium aluminide alloys exhibit a much better mechanical performance than their monolithic constituents $\gamma$(TiAl) and $\alpha_2$ (Ti3Al), provided that the phase distribution and grain size are suitably controlled. Two-phase titantium aliuminde alloys with proper phase distribution and grain size exhibit better mechanicalperformance compared with monolithicconstituents gamma and alpha[].
-Brittle fracture in TiAl alloy strongly affects the safety of fracture of structure like turbo of aircraft engine andcombustion generator. [R].Defects such as dislocation, void and segregation plays an significant role in the process of fracture[R].In order to understanding the mechanism of brittle fracture, multi-scale methods from micro to marco scale have been applied to investigate the behavior of fracture. It's necessary to carefully examine the revolution of defects and its influence on the fracture process at atomic scale.
-A previous study on void growth in gamma-TiAl single crystal has reveals that void with high volume fraction detracts incipient yield strength [R].
+Brittle fracture in TiAl alloy strongly affects the safety of fracture of structure like turbo of aircraft engine andcombustion generator[].Defects such as dislocation, void and segregation plays an significant role in the process of fracture[].In order to understanding the mechanism of brittle fracture, multi-scale methods from micro to marco scale have been applied to investigate the behavior of fracture. It's necessary to carefully examine the revolution of defects and its influence on the fracture process at atomic scale.
+A previous study on void growth in gamma-TiAl single crystal has reveals that void with high volume fraction detracts incipient yield strength [].
 Molecular dynamics(MD method has been use to investigate the evolution of void in materials in nano-
-scale[R].
+scale[].
 The fracture mechanisms in the duplex micro-structure are plasticity-induced grain boundary de- cohesion
 and cleavage, while those in the lamellar microstructure are interface delamination and crack- ing across the
-lamellae[R].
+lamellae[].
 
 \section{Molecular Dynamics Simulation }
 
@@ -108,7 +114,6 @@ The atomic stress is calculated using the virial definition :
 $$\sigma_t(i)=-$$
 $$\sigma_t(i)= $$
  
-
 \section{Results and Discussion}
 
 \subsection{Deformation Mechanisms in Two-Phase Alloys}
