--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -160,6 +160,41 @@ A step, of the width of a burgers vector, will be generated at both sidesof a cr
 \end{figure}
 
 %\subsection{The influence of void on strength of TiAl alloy}
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{img/frame2}
+	\caption{stress-$\sigma$=0}
+	\label{fig:all_line}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{img/frame150}
+	\caption{stress-$\sigma$=0.15}
+	\label{fig:all_line}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{img/frame160}
+	\caption{stress-$\sigma$=0.16}
+	\label{fig:all_line}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{img/frame170}
+	\caption{stress-$\sigma$=0.17}
+	\label{fig:all_line}
+\end{figure}
+
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{img/frame180}
+	\caption{stress-$\sigma$=0.18}
+	\label{fig:all_line}
+\end{figure}
 
 \begin{figure}
 	\centering
