--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -33,7 +33,7 @@
 \begin{document}
 \begin{frontmatter}
 \title{Effect of Nanovoid on Fracture Process of Two-Phase $\alpha$($\rm TiAl$)+$\gamma$($\rm Ti_3Al$) Alloy}
-%\tnotetext[mytitlenote]{*** \href{http://www.ctan.org/tex-archive/macros/latex/contrib/elsarticle}{CTAN}.}
+%\tnotetext[mytitlenote]{*** \href{http: //www.ctan.org/tex-archive/macros/latex/contrib/elsarticle}{CTAN}.}
 %% Group authors per affiliation:
 %\author{Maomao Wang\fnref{myfootnote}}
 
@@ -222,8 +222,8 @@ The location of void affects strength of material. Comparing with the model with
 
 \begin{figure}
 	\centering
-	\includegraphics[width=1\linewidth]{"img/fracture process"}
-	\caption{}
+	\includegraphics[width=1\linewidth]{"img/fracture3"}
+	\caption{Fracture Process}
 	\label{fig:fracture-process}
 \end{figure}
 
